<resources>
    <string name="app_name">Travl</string>
    <string name="travlzine">TravlZine</string>
    <string name="location">Местоположение</string>
    <string name="search">Поиск</string>
    <string name="map">Карта</string>

    <string name="mapbox_access_token">
        pk.eyJ1IjoicGVyZXZlZCIsImEiOiJjanM5YTkyejYwa2JnNDRxeG1uY2FvcmtwIn0.vPpjgtkaQh-YZApGJV83ww
    </string>
    <string name="place_collections">Place Collections</string>
    <string name="places_on_map">Places on Map</string>
    <string name="weather_icon_description">weather_icon_description</string>
    <string name="test_temperature">15 C°</string>
    <string name="test_city">City</string>
    <string name="start_page_title">Главная</string>
    <string name="travl_zine_title">Travl Zine</string>
    <!--Place strings-->
    <string name="place_category">КАТЕГОРИЯ</string>
    <string name="place_title">Заголовок</string>
    <string name="place_subtitle">Подзаголовок</string>
    <string name="place_address">АДРЕС:</string>
    <string name="place_address_description">адрес</string>
    <string name="place_route_to">КАК ДОБРАТЬСЯ:</string>
    <string name="place_route_to_description">маршрут</string>
    <string name="place_popularity">ПОПУЛЯРНОСТЬ:</string>

    <string name="place_description">описание</string>
    <string name="place_button_text">ЧИТАТЬ ДАЛЬШЕ</string>
    <string name="place_author">Фото/текст:</string>
    <string name="place_author_name">автор</string>

    <string name="image_view_content_description">image_view</string>
    <string name="mapbox_syle_link_minimo">mapbox://styles/pereved/cjt7ktyjz0hjf1fmi32rav0sx</string>
    <string name="favorite">Избранное</string>
    <string name="share">Share</string>
    <string name="interesting_nearby">Интересное здесь</string>
    <string name="city_not_found">Не найден</string>
    <string name="user_location_marker">Вы здесь:</string>
    <string name="getting_articles">Получение статей</string>
    <string name="city_definition">Определение города</string>
    <string name="no_category_text">Нет категории</string>
    <string name="show_more">Показать еще</string>

    <string name="category_color_architecture">#A5A5A5</string>
    <string name="category_color_goods">#C14040</string>
    <string name="category_color_food">#EEAE75</string>
    <string name="category_color_habitation">#82BCEE</string>
    <string name="category_color_nature">#97C89A</string>
    <string name="category_color_streetart">#E5CC4F</string>
    <string name="category_color_trove">#A496D4</string>
    <string name="category_color_urbex">#444444</string>
    <string name="category_color_view">#D780C0</string>
    <string name="category_color_default">#A5A5A5</string>
    <string name="no_more_articles">Статей больше нет</string>
    <string name="start_page_city_loading">ОПРЕДЕЛЯЮ ГОРОД...</string>
    <string name="start_page_city_info_button_title">Инфо о городе</string>
    <string-array name="cities">
        <item>Выберите город</item>
    </string-array>
</resources>
