<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="none">
        <item
            android:id="@+id/app_bar_start_page"
            android:icon="@drawable/ic_home"
            android:title="@string/start_page_title" />
        <item
            android:id="@+id/app_bar_collections"
            android:icon="@drawable/ic_collections"
            android:title="@string/collections" />
        <item
            android:id="@+id/app_bar_favorite"
            android:icon="@drawable/ic_favorite_outline"
            android:title="@string/favorite" />
        <item
            android:id="@+id/app_bar_map"
            android:icon="@drawable/ic_map"
            android:title="@string/map" />
    </group>
</menu>