<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/main_page_text_linear_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/user_city_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="City" />

        <TextView
            android:id="@+id/city_temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="15 C°" />

        <ImageView
            android:id="@+id/city_weather_icon"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/weather_icon_description"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:src="@drawable/cloud_icon_foreground" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/main_page_images_linear_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_page_text_linear_layout">

        <ImageView
            android:id="@+id/place_collections_image_view"
            android:layout_width="204dp"
            android:layout_height="200dp"
            android:layout_gravity="start"
            android:contentDescription="@string/place_collections"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:src="@drawable/places_collections"
            tools:text="ImageView" />

        <ImageView
            android:id="@+id/places_on_map_image_view"
            android:layout_width="204dp"
            android:layout_height="200dp"
            android:layout_gravity="end"
            android:contentDescription="@string/places_on_map"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:src="@drawable/places_on_map"
            tools:text="ImageView" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/main_page_places_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_page_images_linear_layout" />
</android.support.constraint.ConstraintLayout>